force-app/main/default/objects/Vacation_Request__c/fields/Resource_Project__c.field-meta.xml
<CustomField>
    <fullName>Resource_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource-Project</label>
    <referenceTo>Resource_Project__c</referenceTo>
    <relationshipLabel>Vacations Request</relationshipLabel>
    <relationshipName>Vacations_Request</relationshipName>
    <type>Lookup</type>
</CustomField>