force-app/main/default/objects/Vacation_Request__c/fields/vacationEndDate__c.field-meta.xml
<CustomField>
    <fullName>vacationEndDate__c</fullName>
    <label>vacationEndDate</label>
    <type>Date</type>
</CustomField>