force-app/main/default/objects/Vacation_Request__c/fields/vacationStartDate__c.field-meta.xml
<CustomField>
    <fullName>vacationStartDate__c</fullName>
    <label>vacationStartDate</label>
    <type>Date</type>
</CustomField>